# easy-data-deletion

./: .env.template  .gitignore  CLAUDE.md  README.md  broker_agent.py  payload.txt  pyproject.toml  requirements.txt
.githooks/: pre-commit
broker_configs/: acxiom.json
data_deletion/: acxiom_agent.py  main.py  metrics.py  request_via_email.py  request_via_form.py  solve_acxiom_captcha.py
data_deletion/broker_lists/: current.csv
data_deletion/example_responses/: anteraid.txt  checkpeople_0.txt  familytreenow.txt  intelius_0.txt  mylife_2.txt  spyfly_1.txt  spyfly_2.txt  spyfly_3.txt
data_deletion/utils/: __init__.py  agent.py  broker.py  browser.py  captcha.py  gmail.py
example_responses/: ancestry.txt  checkpeople_1.txt  dataveria.txt  intelius_1.txt  lexisnexis.txt  mylife_1.txt  verecor.txt
services/: __init__.py  ai_fallback_service.py  broker_processor.py  form_handler.py
tests/: __init__.py  conftest.py
tests/integration/: test_orchestrator.py
tests/unit/: test_broker_processor.py
utils/: __init__.py  auth.py  broker.py  browser.py  captcha.py  constrained_ai.py  gmail.py  state_utils.py  templates.py  validation.py
