[project]
name = "easy-data-deletion"
version = "0.0.1"
description = "CLI-based data deletion automation suite for data broker removal requests"
authors = [
    {name = "Amir Amangeldi", email = "amir.amangeldi@gmail.com"},
    {name = "Roy Rinberg", email = "royrinberg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.171.0",
    "playwright>=1.52.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "python-dotenv>=1.1.0",
    "yapf>=0.43.0",
    "anticaptchaofficial>=1.0.66",
    "requests>=2.32.4",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0", 
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["utils", "broker_agent"]
omit = ["tests/*", "build/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils*", "services*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]
